Multi-depth RunStats